push footer down using flex style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,16 @@
     box-sizing: border-box;
 }
 
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic  project style*/
+    color: #3a3a3a;
+
+}
+
 /* Header*/
 header {
     background-color: lightcoral;
@@ -13,6 +23,8 @@ header {
 /* Header Content*/
 main {
     background-color: lightblue;
+    /* Make main element take any surplus space to push footer down. This property sets flex grow,shrink and basis*/
+    flex: 1 0 auto;
 }
 
 /* Footer*/
