--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 /* Asterisk wild card selector to override the default styles applied by the browser */
 * {
     padding: 0;
@@ -12,6 +14,7 @@ body {
     flex-direction: column;
     /* Generic  project style*/
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 
 }
 
