--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,12 @@ body {
 
 /* Header*/
 header {
-    background-color: lightcoral;
+    background-color: #ffffff;
+    position: fixed;
+    z-index: 99;
+    padding: 0 1rem;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 h1 {
