Add margin top to main element so it appears under the fix header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,7 @@ main {
     background-color: lightblue;
     /* Make main element take any surplus space to push footer down. This property sets flex grow,shrink and basis*/
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer*/
