Display navbar items and hide toggle label

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,27 @@ main {
 footer {
     background-color: orange;
 }
+
+/* Media query: tablets and larger (768px and up)*/
+
+@media screen and (min-width: 768px){
+    /*Header*/
+
+    nav {
+        display: block;
+        position: relative;
+        width: fit-content;
+        padding-right: 1rem;
+        box-shadow: none;
+    }
+    #menu {
+        display: flex;
+    }
+    #menu > li {
+        display: flex;
+        padding-left: 1rem;
+    }
+    .nav-toggle-label {
+        display: none;
+    }
+}
