add hover navbar item on large screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,3 +128,10 @@ footer {
         margin-top: 79px;
     }
 }
+
+/* Media query: laptops and Desktop (992px and up)*/
+@media screen and (min-width: 992px) {
+    #menu  a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
