style footer for all screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ h1 {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* Navbar styles with dropdown toggle*/ 
+/* Navbar styles with dropdown toggle*/
 nav {
     position: absolute;
     background-color: #ffffff;
@@ -79,9 +79,11 @@ nav {
 #nav-toggle {
     display: none;
 }
+
 .nav-toggle-label {
     font-size: 2rem;
 }
+
 /* Header Content*/
 main {
     background-color: lightblue;
@@ -91,13 +93,23 @@ main {
 }
 
 /* Footer*/
-footer {
-    background-color: orange;
+#social-networks {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px 0;
+    text-align: center;
+    list-style-type: none;
+}
+
+#social-networks i {
+    padding: 5%;
+    font-size: 160%;
+    color: #3a3a3a;
 }
 
 /* Media query: tablets and larger (768px and up)*/
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
     /*Header*/
 
     nav {
@@ -107,21 +119,26 @@ footer {
         padding-right: 1rem;
         box-shadow: none;
     }
+
     #menu {
         display: flex;
     }
-    #menu > li {
+
+    #menu>li {
         display: flex;
         padding-left: 1rem;
     }
+
     .nav-toggle-label {
         display: none;
     }
-    #logo{
+
+    #logo {
         font-size: 280%;
         line-height: 75px;
-        margin: 0 0.5rem;   
+        margin: 0 0.5rem;
     }
+
     /*Main content*/
     main {
         /* Push main content down to accomodate larger header*/
@@ -131,7 +148,7 @@ footer {
 
 /* Media query: laptops and Desktop (992px and up)*/
 @media screen and (min-width: 992px) {
-    #menu  a:hover {
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
