--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,12 +86,18 @@ nav {
 
 /* Header Content*/
 main {
-    background-color: lightblue;
     /* Make main element take any surplus space to push footer down. This property sets flex grow,shrink and basis*/
     flex: 1 0 auto;
     margin-top: 47px;
 }
 
+/*Hero section*/
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center/cover;
+
+}
 /* Footer*/
 #social-networks {
     display: flex;
