Add cover text with club name and location

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,15 @@ body {
 
 }
 
+h1,
+h2,
+h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 /* Header*/
 header {
     background-color: #ffffff;
@@ -35,13 +44,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit
-}
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
 }
 
 #menu {
@@ -96,8 +98,26 @@ main {
     height: 600px;
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat center center/cover;
+    position: relative;
 
 }
+
+#cover-text {
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text>h2,
+#cover-text>h3 {
+    color: #ffffff;
+}
+
 /* Footer*/
 #social-networks {
     display: flex;
@@ -149,6 +169,12 @@ main {
     main {
         /* Push main content down to accomodate larger header*/
         margin-top: 79px;
+    }
+
+    /*Hero*/
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
