--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,8 +130,8 @@ main {
     font-size: 280%;
 }
 
-#benefits-physical > div,
-#benefits-mental > div {
+#benefits-physical>div,
+#benefits-mental>div {
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -140,10 +140,25 @@ main {
     padding: 0 20px;
 }
 
-
-#reasons > h2 {
+#reasons>h2 {
     font-size: 280%;
     margin-bottom: 20px;
+}
+
+#circle-cover-bg {
+    background: url(../images/reasons-image.webp) no-repeat top center/cover;
+    height: 90vh;
+    width: 90vh;
+    margin-bottom: 20px;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Footer*/
